updated to stage 2 (detail activity with reviews and trailers)

--- a/app/src/main/res/menu/menu_fragment_main.xml
+++ b/app/src/main/res/menu/menu_fragment_main.xml
@@ -9,6 +9,8 @@
                     android:title="@string/action_sort_by_popularity" />
                 <item android:id="@+id/action_sort_by_rating"
                     android:title="@string/action_sort_by_rating" />
+                <item android:id="@+id/action_sort_by_favorite"
+                    android:title="@string/action_sort_by_favorite" />
             </group>
         </menu>
     </item>
