--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/gridview_movies"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:numColumns="2"
+    android:numColumns="auto_fit"
     android:columnWidth="@dimen/grid_item_movie_width"
     android:verticalSpacing="@dimen/grid_item_movie_spacing"
     android:horizontalSpacing="@dimen/grid_item_movie_spacing"
